# smartterm

./: CMakeLists.txt  README.md
2d_array_task/: CMakeLists.txt  main.cpp
complex/: CMakeLists.txt  complex.cpp
lib/myutils/: CMakeLists.txt  cstring.cpp  string.cpp
lib/myutils/include/myutils/: any.h  cstring.h  python_list.h  string.h  vector.h
lib/term/: CMakeLists.txt  input.cpp  internal.h  term.cpp
lib/term/include/term/: input.h  term.h
lib/tui/: CMakeLists.txt  button.cpp  button.h  input_field.cpp  input_field.h  menu.cpp  menu.h  page.cpp  page.h  tui.cpp  widget.h
lib/tui/include/term/: signal.h  tui.h
python_list/: CMakeLists.txt  main.cpp
src/: application.cpp  application.h  buffer.h  circle.cpp  circle.h  complex.cpp  complex.h  create_page.h  display_page.h  edit_page.h  geoshape.h  line.cpp  line.h  list_page.h  main.cpp  main_page.h  picture.cpp  picture.h  point.h  rect.cpp  rect.h  save_page.h  shape.h  square.h  stack.h  triangle.h  vector.h
swap_task/: CMakeLists.txt  main.cpp
task1/: CMakeLists.txt  main.cpp
task2/: CMakeLists.txt
task3/: CMakeLists.txt  main.cpp
task4/: CMakeLists.txt  main.cpp
test_string/: CMakeLists.txt
